# MotsCroises

./: .gitignore  ALGORITHM.md  DeuxiemeCroisement.ipuz  DeuxiemeCroisement.txt  MadeWithLove.ipuz  MadeWithLove.txt  README.md  REFERENCES.txt  buildwords.sh  complex.txt  dawg.fr.txt  dict_en.txt  dict_fr.txt  dict_k13.txt  dict_k8.txt  generate.js  index.html  loader.js  package-lock.json  package.json  reduce.js  sample2.txt  sample3.txt  simple.txt  slotsex.txt  solution1.txt  solution2.txt  testmatcher.js  testpack.js  worker.js
.github/workflows/: build.yaml
Algorithm/: Algorithm.cabal  autofill.c  autofill.h  autofill.hs  betterfill.hs  betterfill.py  cabal.project.local
Data/: CE1669.txt  English15x15Christmas.txt  French15x15Christmas.txt  american.txt  big_en_custom.txt  geant.txt  sample3.txt  sample4.txt  slotsex.txt
Studies/: failcase.txt  graph.dot  testblacksquare.py  viewslots.js
Work/: ALGORITHM.md  README.txt  big.txt  buildwords.sh  complex.txt  dictionary.txt  dictionary_en.txt  failcase.txt  forgeipuz.js  generate.js  mouse.txt  notfail.txt  sample1.txt  sample2.txt  sample_dict_ado_fr.txt  simp2.txt  simple.txt  solution2.txt  solution3.txt  solution4.txt  solutionbig.txt  testmatcher.js
Work/knownwords/: expe1.txt  experiment.js  expesol1.txt  words.txt
