cabal-version:      2.4
name:               Algorithm
version:            0.1.0.0
author:             Sebastien
maintainer:         sebastien@migniot.com

executable autofill
    main-is:          autofill.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   .
    default-language: Haskell2010
